# cmake-practice

./: README
hello_world/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello
hello_world_clear/: CMakeLists.txt
hello_world_clear/src/: CMakeLists.txt
hello_world_exe/: Makefile
hello_world_lib/: CMakeLists.txt
hello_world_lib/src/: CMakeLists.txt  hello.c
hello_world_out/: CMakeLists.txt
hello_world_out/src/: .CMakeLists.txt.swp  CMakeLists.txt
hello_world_share/: CMakeLists.txt
hello_world_share/lib/: libhello.dylib
hello_world_share/src/: CMakeLists.txt  main.c
