cmake_minimum_required(VERSION 2.8)

SET(LIBHELLO_SRC hello.c)

ADD_LIBRARY(hello_dynamic SHARED ${LIBHELLO_SRC})
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})

SET_TARGET_PROPERTIES(hello_dynamic PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
